# Fourier-Transform-Visualization

./: .gitignore  DESIGN.md  README.md  __init__.pyi  app.pyi  core.pyi  pyproject.toml  requirements.txt  triangular_dirac_approximation.py  viz.pyi
data/: testMRimage.mat  testMRimage.npy
examples/: 01_intro.ipynb  02_ft_properties.ipynb  02_inverse.ipynb  03_rect_sinc.ipynb  05_beyond_nyquist_hilbert.ipynb  _render_screenshots.py  nb_to_offline_html.py
examples/.ipynb_checkpoints/: 02_inverse-checkpoint.ipynb  03_rect_sinc-checkpoint.ipynb
examples/screenshots/: 0A_cexp_match_pos__a_signal.html  0A_cexp_match_pos__b_helix.html  0A_cexp_match_pos__c_wound.html  0A_cexp_match_pos__d_forward_integral.html  0B_cexp_neg_no_match__a_signal.html  0B_cexp_neg_no_match__b_helix.html  0B_cexp_neg_no_match__c_wound.html  0B_cexp_neg_no_match__d_forward_integral.html  0C_cexp_orthogonal__a_signal.html  0C_cexp_orthogonal__b_helix.html  0C_cexp_orthogonal__c_wound.html  0C_cexp_orthogonal__d_forward_integral.html  0D_cexp_quasi__a_signal.html  0D_cexp_quasi__b_helix.html  0D_cexp_quasi__c_wound.html  0D_cexp_quasi__d_forward_integral.html  A1_cos_match__a_signal.html  A1_cos_match__b_helix.html  A1_cos_match__c_wound.html  A1_cos_match__d_forward_integral.html  A1_cos_match_pos__a_signal.html  A1_cos_match_pos__b_helix.html  A1_cos_match_pos__c_wound.html  A1_cos_match_pos__d_forward_integral.html  A1n_cos_match_neg__a_signal.html  A1n_cos_match_neg__b_helix.html  A1n_cos_match_neg__c_wound.html  (+62 more)
ftvis/: __init__.py  __init__.pyi  app.pyi  core.py  core.pyi  viz.py  viz.pyi
ftvis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: export_html.py
tests/: test_core.py
